move command registration to new namespace basic rhino/hydra example web client now gets notfied of new messages remove log rotation as it would add unnecessary complexity